Project done for presentation

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/images/github_16.png" />
+    <link rel="icon" type="image/svg+xml" href="./src/images/JobIcon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jobs App Tracker</title>
   </head>
